--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     </head>
     <body>
         <!-- Navigation-->
+<nav>
+  <a href="scratch.html">Scratch Page</a> |
+  <a href="app.html">Riddle App</a> |
+  <a href="webapp.html">Resume Page</a>
+</nav>
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="index.html">Start Bootstrap</a>
