--- a/scratch.html
+++ b/scratch.html
@@ -42,6 +42,11 @@
     </style>
   </head>
   <body>
+<nav>
+  <a href="scratch.html">Scratch Page</a> |
+  <a href="app.html">Riddle App</a> |
+  <a href="webapp.html">Resume Page</a>
+</nav>
     <div style="text-align: center; margin: 2rem 0">
       <a href="index.html" class="nav-button">Home Page</a>
 
