--- a/scratch.html
+++ b/scratch.html
@@ -13,7 +13,7 @@
             rgba(0, 0, 0, 0.4),
             rgba(0, 0, 0, 0.4)
           ),
-          url("assets/img/music.jpeg");
+          url("music.jpeg");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
