--- a/scratch.html
+++ b/scratch.html
@@ -45,7 +45,7 @@
 <nav>
   <a href="scratch.html">Scratch Page</a> |
   <a href="app.html">Riddle App</a> |
-  <a href="webapp.html">Resume Page</a>
+  <a href="index.html">Resume Page</a>
 </nav>
     <div style="text-align: center; margin: 2rem 0">
       <a href="index.html" class="nav-button">Home Page</a>
