--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 <nav>
   <a href="scratch.html">Scratch Page</a> |
   <a href="app.html">Riddle App</a> |
-  <a href="webapp.html">Resume Page</a>
+  <a href="index.html">Resume Page</a>
 </nav>
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+            
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -40,7 +40,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('assets/img/nature2.jpg')">
+        <header class="masthead" style="background-image: url('nature2.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
